--- a/styles.css
+++ b/styles.css
@@ -208,7 +208,7 @@ main {
 }
 
 .trend-category img:hover {
-    transform: scale(1.1); /
+    transform: scale(1.1); 
     box-shadow: 0 4px 20px rgba(0, 0, 0, 0.3); 
     filter: brightness(1.2);
 }
